Bug 140248 - table row background applied via css repeats in table cells instead of spanning all cells in the row
Summary: table row background applied via css repeats in table cells instead of spanni...
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 133190 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-01-18 14:08 UTC by Scott R. Godin
Modified: 2007-01-29 00:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
test case with minimal html and css markup (1.45 KB, text/html)
2007-01-18 14:11 UTC, Scott R. Godin
Details
screenshot from opera 9.10 showing correct behaviour (75.90 KB, image/jpeg)
2007-01-18 14:12 UTC, Scott R. Godin
Details
screenshot showing incorrect behaviour in konqueror (63.12 KB, image/jpeg)
2007-01-18 14:15 UTC, Scott R. Godin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Scott R. Godin 2007-01-18 14:08:57 UTC
Version:            (using KDE KDE 3.5.5)
Installed from:    Fedora RPMs
Compiler:          gcc-4.1.1-1.fc5 
OS:                Linux

applying tr { background: url(/path/to/image.jpg) top left no-repeat; } to a table row, causes konqueror to repeat the background in each table cell as though I had specified tr td {} and not tr {} 

the background should span across all table cells in the row, not restart over again for each table cell

I will attach test case and two screenshots showing working and non-working examples

functions correctly in Opera 9.10 and Firefox 1.5.0.9, but fails in MSIE 6 (expected) and Konqueror 3.5.5 (not expected), and possibly the current safari as well.
Comment 1 Scott R. Godin 2007-01-18 14:11:47 UTC
Created attachment 19322 [details]
test case with minimal html and css markup

both the html and css validate cleanly, with html 4.01 strict doctype
Comment 2 Scott R. Godin 2007-01-18 14:12:35 UTC
Created attachment 19323 [details]
screenshot from opera 9.10 showing correct behaviour
Comment 3 Scott R. Godin 2007-01-18 14:15:03 UTC
Created attachment 19324 [details]
screenshot showing incorrect behaviour in konqueror
Comment 4 Scott R. Godin 2007-01-18 14:18:07 UTC
Additionally I had thought this was already caught and resolved when I noticed that http://bugs.kde.org/show_bug.cgi?id=127444 was reported resolved, however that was reported for KDE 3.5.2 and marked resolved almost immediately -- I would have expected the fix to be in by 3.5.5 

possibly this is a duplicate and the underlying problem is still showing its head, but I am not certain.
Comment 5 Raúl 2007-01-18 14:28:02 UTC
I can confirm this behaviour on konqueror 3.5.5. Firefox 2.0.0.1 works as expected.
Comment 6 Germain Garand 2007-01-21 16:49:05 UTC
SVN commit 625913 by ggarand:

Switch table rows to RenderBox and give them real dimensions.
Change table cell position so they don't end up in the same coordinate space as rows.
Fix cell background painting. Some other background related work.

BUG: 140248



 M  +2 -5      render_body.cpp  
 M  +23 -23    render_box.cpp  
 M  +5 -6      render_box.h  
 M  +2 -5      render_form.cpp  
 M  +12 -13    render_line.cpp  
 M  +2 -2      render_line.h  
 M  +1 -1      render_object.h  
 M  +4 -7      render_replaced.cpp  
 M  +3 -3      render_replaced.h  
 M  +63 -52    render_table.cpp  
 M  +2 -3      render_table.h  
Comment 7 Germain Garand 2007-01-29 00:36:33 UTC
*** Bug 133190 has been marked as a duplicate of this bug. ***