Switch table rows to RenderBox and give them real dimensions. Change table cell position so they don't end up in the same coordinate space as rows. Fix cell background painting. Some other background related work.

BUG: 140248


svn path=/trunk/KDE/kdelibs/; revision=625913