khtml/rendering/render_body.cpp
@@ -69,12 +69,9 @@ void RenderBody::paintBoxDecorations(PaintInfo& paintInfo, int _tx, int _ty)
     int w = width();
     int h = height() + borderTopExtra() + borderBottomExtra();
     _ty -= borderTopExtra();
+    QRect cr = QRect(_tx, _ty, w, h).intersected(paintInfo.r);
 
-    int my = qMax(_ty, paintInfo.r.y());
-    int end = qMin( paintInfo.r.y()+paintInfo.r.height(), _ty + h );
-    int mh = end - my;
-
-    paintBackgrounds(paintInfo.p, bgColor, bgLayer, my, mh, _tx, _ty, w, h);
+    paintBackgrounds(paintInfo.p, bgColor, bgLayer, cr, _tx, _ty, w, h);
 
     if(style()->hasBorder())
 	paintBorder( paintInfo.p, _tx, _ty, w, h, style() );
